--- a/book/ki/ki_allgemein.ipynb
+++ b/book/ki/ki_allgemein.ipynb
@@ -46,6 +46,10 @@
     "Eifriger Lerner  \n",
     ": Ein Ansatz, bei dem das Modell vollständig trainiert wird, bevor es Vorhersagen trifft. Beispiele: [Entscheidungsbaumlernen](#entscheidungsbaumlernen), [Neuronales Netz](#neuronales-netz). (s. [Fauler Lerner](#fauler-lerner))\n",
     "\n",
+    "(euklidische-distanz)=\n",
+    "Euklidische Distanz\n",
+    ": Eine Distanzmetrik, welche die direkte Strecke (Luftlinie) zwischen zwei Punkten misst. Sie wird berechnet, indem man die Differenzen der Koordinaten quadriert, addiert und daraus die Wurzel zieht. Beispiel: Die Euklidische Distanz zwischen den Punkten (1, 2) und (4, 6) beträgt $\\sqrt{(1-4)^2 + (2-6)^2} = \\sqrt{9 + 16} = 5$.\n",
+    "\n",
     "(fauler-lerner)=\n",
     "Fauler Lerner  \n",
     ": Ein Ansatz, bei dem das Modell erst zur Laufzeit (also bei einer Anfrage) trainiert wird, anstatt vorher. Beispiele: [K-Nächste-Nachbarn-Algorithmus](#k-naechste-nachbarn-algorithmus). (s. [Eifriger Lerner](#eifriger-lerner))\n",
