Finale Version k-Means

--- a/book/ki/kmeansclustering2.ipynb
+++ b/book/ki/kmeansclustering2.ipynb
@@ -157,6 +157,8 @@
     "def ist_gerade(zahl: int) -> bool:\n",
     "    \"\"\"\n",
     "    Prüft, ob eine Zahl gerade ist.\n",
+    "    Args:\n",
+    "        zahl (int): Die zu prüfende Zahl\n",
     "    Returns:\n",
     "        bool: True, wenn die Zahl gerade ist, sonst False\n",
     "    Examples:\n",
@@ -472,12 +474,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aufgabe 4: Aktualisieren der Zentroiden\n",
+    "# Aufgabe 4: Koordinaten eines Zentroiden berechnen\n",
     "\n",
-    "Wir kommen der fertigen Implementierung des k-Means-Algorithmus immer näher.\n",
-    "\n",
-    "## Koordinaten eines Zentroiden berechnen\n",
-    " Wir benötigen nun zum einen noch eine Funktion `berechne_zentroid_koordinaten()`, welche uns aus den Datenpunkten eines Clusters die neuen Koordinaten des Zentroiden berechnet. Diese Funktion wird dann von `aktualisiere_zentroiden()` verwendet, um die Zentroiden in jeder Iteration alle neu zu berechnen."
+    " Wir benötigen nun zum einen noch eine Funktion `berechne_zentroid_koordinaten()`, welche uns aus den Datenpunkten eines Clusters die neuen Koordinaten des Zentroiden berechnet. Diese Funktion wird dann von `aktualisiere_zentroiden()` in der nächsten Aufgabe verwendet, um die Zentroiden in jeder Iteration alle neu zu berechnen."
    ]
   },
   {
@@ -511,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Zentroiden für alle Cluster neu berechnen\n",
+    "# Aufgabe 5: Zentroiden für alle Cluster neu berechnen\n",
     "\n",
     "Nun wird es spannend: Mit Hilfe der vorigen Methode `berechne_zentroid_koordinaten()` kannst du nun für alle Cluster die Zentroiden neu berechnen lassen. `aktualisiere_zentroiden()` erhält dabei ein Dictionary der Clusters. Ein Eintrag im Dictionary ist dabei der Index des Clusters und die dazugehörigen Datenpunkte. Es ist möglich, über die Werte des Dictionary zu iterieren mit `dict.values()`\n",
     "\n",
@@ -520,7 +519,7 @@
     "clusters = {\n",
     "    0: [Datenpunkt(1, 1), Datenpunkt(2, 2)],\n",
     "    1: [Datenpunkt(4, 4), Datenpunkt(5, 5)],\n",
-    "    2: [Datenpunkt(8, 8), Datenpunkt(9, 9)]\n",
+    "    2: [Datenpunkt(8, 8)]\n",
     "}\n",
     "\n",
     "for datenpunkte_in_cluster in clusters.values():\n",
@@ -645,9 +644,12 @@
     "# Unit Test für die Hauptfunktion\n",
     "run_doctests_mit_lesbarer_ausgabe(k_means)\n",
     "\n",
-    "# Starte den k-means Algorithmus mit 100 Datenpunkten, 3 Zentroiden und maximal 10 Iterationen\n",
-    "datenpunkte = generiere_datenpunkte(100, zahlenraum=10, randomseed=1)\n",
-    "clusters, zentroiden = k_means(datenpunkte=datenpunkte, anzahl_cluster=4, max_iterationen=100, print_plots=True)\n"
+    "# Manueller Start des k-means Algorithmus\n",
+    "datenpunkte = generiere_datenpunkte(50, zahlenraum=10)\n",
+    "clusters, zentroiden = k_means(datenpunkte=datenpunkte, anzahl_cluster=4, max_iterationen=100, print_plots=True)\n",
+    "\n",
+    "logger.info(f\"Cluster: {clusters}\")\n",
+    "logger.info(f\"Zentroiden: {zentroiden}\")\n"
    ]
   }
  ],
