--- a/book/ki/kmeansclustering2_loesung.ipynb
+++ b/book/ki/kmeansclustering2_loesung.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "# Finaler Loglevel. Diesen könnt ihr auch beliebig in den späteren Übungen setzen.\n",
     "# Es zählt immer der zuletzt gesetzte Loglevel.\n",
-    "logger.setLevel(logging.INFO)"
+    "logger.setLevel(logging.DEBUG)"
    ]
   },
   {
