--- a/book/ki/kmeansclustering.ipynb
+++ b/book/ki/kmeansclustering.ipynb
@@ -4,17 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{margin}\n",
-    "Shortlink: https://tinyurl.com/tgi13kmeans\n",
+    "\n",
+    "````{margin}\n",
+    "```{admonition} Shortlink\n",
+    ":class: seealso\n",
+    "https://is.gd/tgi13_kmeans\n",
     "```\n",
+    "````\n",
     "# k-Means-Clustering\n",
     "Du kennst bereits den [k-Nächste-Nachbarn-Algorithmus](knearestneighbor), ein Verfahren, das mit [Trainingsdaten](#trainingsdaten) neue Daten klassifiziert. Nun betrachten wir [k-Means-Clustering](https://de.wikipedia.org/wiki/k-Means-Algorithmus), einen Algorithmus, um [Datenpunkte](#datenpunkt) in sogenannte Cluster zu gruppieren.\n",
     "\n",
     "Im Bereich der KI wird oft mit großen Datenmengen gearbeitet, die auf Muster untersucht und in Gruppen eingeteilt werden. Algorithmen dieser Art sind Verfahren der [Clusteranalyse](https://de.wikipedia.org/wiki/Clusteranalyse). k-Means ist so ein Algorithmus, der Datenpunkte ohne vorherige Kenntnis der Gruppenzugehörigkeit in $k$ Cluster einteilt. Das macht k-Means zu einem [unüberwachten Lernalgorithmus](#unueberwachtes-lernen). Seine Stärke liegt in der effizienten Strukturierung großer Datensätze und dem Entdecken versteckter Muster.\n",
     "\n",
-    "```{margin}\n",
+    "````{margin}\n",
+    "```{admonition} Info\n",
+    ":class: information\n",
     "[Maschinelles Lernen](https://de.wikipedia.org/wiki/Maschinelles_Lernen) ist ein Teilgebiet der KI, in dem Algorithmen aus Daten lernen und Vorhersagen oder Entscheidungen treffen können. Algorithmen im Bereich des maschinellen Lernens haben das Ziel, große Datenmengen zu analysieren und Muster darin zu erkennen.\n",
-    "```"
+    "```\n",
+    "````"
    ]
   },
   {
@@ -96,9 +103,12 @@
     "(k-means-clustering-algorithmus)=\n",
     "## Der k-means-Clustering Algorithmus\n",
     "\n",
-    "```{margin}\n",
-    "Auf [dieser toll gemachten Seite](https://www.naftaliharris.com/blog/visualizing-k-means-clustering/) kann man den Algorithmus mit verschiedenen Datensammlugen graphisch nachspielen!\n",
+    "````{margin}\n",
+    "```{admonition} Try it!\n",
+    ":class: seealso\n",
+    "Auf [dieser toll programmierten Seite](https://www.naftaliharris.com/blog/visualizing-k-means-clustering/) kann man den Algorithmus mit verschiedenen Datensammlugen graphisch nachspielen!\n",
     "```\n",
+    "````\n",
     "\n",
     "Der Ablauf des k-means-Clustering Algorithmus wird in folgende Schritte aufgeteilt:\n",
     "\n",
@@ -376,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
