--- a/book/ki/kmeansclustering.ipynb
+++ b/book/ki/kmeansclustering.ipynb
@@ -103,6 +103,7 @@
     "(k-means-clustering-algorithmus)=\n",
     "## Der k-means-Clustering Algorithmus\n",
     "\n",
+    "\n",
     "````{margin}\n",
     "```{admonition} Try it!\n",
     ":class: seealso\n",
@@ -270,7 +271,7 @@
     "\n",
     "```{admonition} Tipp\n",
     ":class: tip, dropdown\n",
-    "Was könnte der [Algorithmus](#k-means-algorithmus) zu Beginn anders gemacht haben, damit unterschiedlich Ergebnisse zustande kommen?\n",
+    "Was könnte der [Algorithmus](#k-means-clustering-algorithmus) zu Beginn anders gemacht haben, damit unterschiedlich Ergebnisse zustande kommen?\n",
     "```{admonition} Tipp, wenn du noch keine Idee hast\n",
     ":class: tip, dropdown\n",
     "Wie werden die Zentroiden initialisiert und wie kann dieses Verfahrensweise zu unterschiedliche Ergebnissen führen?\n",
@@ -357,12 +358,10 @@
     "Demonstration der Elbow-Methode\n",
     "```\n",
     "\n",
-    "\n",
     "Die optimale Anzahl der Cluster $k$ ist genau dort, wo dieser Knickpunkt liegt. Dies ist der Punkt, an dem die Verbesserung durch mehr Cluster stark nachlässt, und wir eine gute Balance zwischen Genauigkeit und Einfachheit erreichen.\n",
     "\n",
-    "```{admonition}\n",
+    "```{admonition} Warum funktioniert die Elbow-Methode?\n",
     ":class: note\n",
-    "Warum funktioniert die Elbow-Methode?\n",
     "Die Methode basiert auf der Idee, dass eine kleine Anzahl von Clustern zu einer schlechten Gruppierung führt, während eine zu große Anzahl von Clustern unnötig ist und zu Overfitting führen kann. Der Knick zeigt den Punkt, an dem sich der Aufwand für mehr Cluster nicht mehr lohnt.\n",
     "```\n",
     "\n",
