Korrekte Überschriften Hierarchie (Fehler jb build)

--- a/book/datenstrukturen/klausurvorbereitung_mit_loesungen.ipynb
+++ b/book/datenstrukturen/klausurvorbereitung_mit_loesungen.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aufgaben zur Vorbereitung auf Klausur und Abitur\n"
+    "# Aufgaben zur Vorbereitung auf Klausur und Abitur"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aufgabe: Sinnvollen ADT verwenden\n",
+    "## Aufgabe\n",
     "\n",
     "Welcher abstrakte Datentyp ist jeweils sinnvoll für die folgenden Anwendungen. Entscheide dich zwischen *Liste*, *Stapel*, *Warteschlange*, *assoziatives Array* und *Baum*.\n",
     "\n",
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aufgabe Verkettete Listen: Objektdiagramm zeichnen\n",
+    "## Aufgabe Verkettete Listen: Objektdiagramm zeichnen\n",
     "Für die Produktion des Films \"Bibi und Tina (Teil 17)\" werden - warum auch immer - alle im Drehbuch vorkommenden Figuren in einer verketteten Liste verwaltet.\n",
     "Der folgende Pseudocode erzeugt diese Liste mit den Klassen und Methoden aus dem Klassendiagram in {numref}`fig_kd_verkettete_liste`. \n",
     "\n",
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aufgabe Verkettete Listen: Operation implementieren\n",
+    "## Aufgabe Verkettete Listen: Operation implementieren\n",
     "Implementiere die Methode `anhaengen` der Klasse `VerketteteListe` in Pseudocode oder Python, so wie sie im Klassendiagramm in {numref}`fig_kd_verkettete_liste` vorkommt. \n",
     "\n",
     "``````{admonition} Lösung:\n",
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aufgabe Stapel\n",
+    "## Aufgabe Stapel\n",
     "Was gibt der folgende Code aus?\n",
     "\n",
     "```python\n",
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aufgabe Binärbaum: Preorder/Postorder/Inorder\n",
+    "## Aufgabe Binärbaum: Preorder/Postorder/Inorder\n",
     "Betrachte den folgenden Baum.\n",
     "\n",
     "```{figure} bilder/baeume/aufgabe_binbaum_suchbaum_seed40.svg\n",
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aufgabe Binärbaum: Operation implementieren\n",
+    "## Aufgabe Binärbaum: Operation implementieren\n",
     "Der folgende Binärbaum soll aufgebaut werden:\n",
     "```{figure} bilder/baeume/baum_abitur.svg\n",
     "---\n",
@@ -266,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aufgabe Binärbaum: Rekursion verstehen\n",
+    "## Aufgabe Binärbaum: Rekursion verstehen\n",
     "Betrachte den folgenden Baum.\n",
     "\n",
     "```{figure} bilder/aufgabe_rekursion_verstehen_seed310347.svg\n",
@@ -308,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aufgabe Binärbaum: Rekursion programmieren\n",
+    "## Aufgabe Binärbaum: Rekursion programmieren\n",
     "\n",
     "Ergänze den untenstehenden Code zu einer rekursiven Funktion `summe(knoten: Knoten|None)`, die die Summe aller Werte berechnet, die in dem Baum gespeichert sind.  \n",
     "(Beispiel: Für den Baum aus der vorigen Abbildung müsste die Funktion den Wert 432 als Summe aller Knoteninhalte berechnen.)\n",
