Anpassungen nach Unterricht

--- a/book/ki/kmeansclustering2.ipynb
+++ b/book/ki/kmeansclustering2.ipynb
@@ -89,7 +89,7 @@
     "Mit Unit-Tests bist du also gut aufgestellt, um zuverlässigen und stabilen Code zu schreiben, der leichter zu warten ist.\n",
     "```\n",
     "\n",
-    "Folgend ist wird definiert, wie die Erfolgs- und Fehlerausgabe in einem für uns gut lesbaren Format ausgegeben wird. Du musst es nicht verstehen, es ist nur wichtig, bei den Implementierungen `run_doctests_mit_lesbarer_ausgabe(methoden_name)` auszuführen, um die Methode zu testen und die Ausgabe dazu erhalten. Du erhälst immer die Info, ob die Methode erfolgreich implementiert wurde oder ob es noch Tests gibt, die fehlschlagen."
+    "Folgend ist wird definiert, wie die Erfolgs- und Fehlerausgabe in einem für uns gut lesbaren Format ausgegeben wird. Du musst es nicht verstehen, es ist nur wichtig, bei den Implementierungen `run_doctests_mit_lesbarer_ausgabe(methoden_name)` auszuführen, um die Methode zu testen und die Ausgabe dazu erhalten. Du erhältst immer die Info, ob die Methode erfolgreich implementiert wurde oder ob es noch Tests gibt, die fehlschlagen."
    ]
   },
   {
@@ -145,7 +145,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Python können wir Funktionen und Klassen mit Docstrings dokumentieren. Docstrings sind mehrzeilige Kommentare, die erklären, was eine Funktion macht, welche Parameter sie benötigt und was sie zurückgibt. Außerdem können wir Beispiele direkt in die Docstrings schreiben, um die Funktionsweise zu zeigen. Und damit haben wir auch schon unsere Unit Tests, wie praktisch!"
+    "In Python können wir Funktionen und Klassen mit Docstrings dokumentieren. Docstrings sind mehrzeilige Kommentare unter der `def ...`-Zeile, die erklären, was die Funktion macht, welche Parameter sie benötigt und was sie zurückgibt. Außerdem können wir Beispiel-Aufrufe direkt in die Docstrings schreiben, um die Funktionsweise zu zeigen. Und damit haben wir auch schon unsere Unit Tests, wie praktisch! Denn iese Beispiele kann man mit den Unit Tests einfach nachspielen. Im Beispiel unten erfolgt das mit der Zeile\n",
+    "\n",
+    "```\n",
+    "run_doctests_mit_lesbarer_ausgabe(ist_gerade)\n",
+    "```"
    ]
   },
   {
@@ -373,13 +377,17 @@
     "    Returns:\n",
     "        float: Euklidische Distanz zwischen den beiden Datenpunkten.\n",
     "    Examples:\n",
-    "        >>> datenpunkt1 = Datenpunkt(1.0, 1.0)\n",
-    "        >>> datenpunkt2 = Datenpunkt(4.0, 5.0)\n",
-    "        >>> berechne_euklidische_distanz(datenpunkt1, datenpunkt2)\n",
-    "        5.0\n",
+    "        >>> datenpunkt3 = Datenpunkt(1.0, 2.0)\n",
+    "        >>> datenpunkt4 = Datenpunkt(3.0, 4.0)\n",
+    "        >>> berechne_euklidische_distanz(datenpunkt3, datenpunkt4)\n",
+    "        2.83\n",
     "        >>> berechne_euklidische_distanz(datenpunkt1, datenpunkt1)\n",
     "        0.0\n",
     "    \"\"\"\n",
+    "    # Du benötigst den Satz des Pythagoras: distanz = sqrt(a^2 + b^2)\n",
+    "    # Potenz: 3 ** 2 = 9\n",
+    "    # Wurzel: 9 ^ 0.5 = 3\n",
+    "    # Zum runden gibt es die Methode round() z.B. round(3.14159, 2) = 3.14\n",
     "    ...  # Hier Lösung ergänzen\n",
     "\n",
     "run_doctests_mit_lesbarer_ausgabe(berechne_euklidische_distanz)"
@@ -391,7 +399,11 @@
    "source": [
     "# Aufgabe 2: Ermitteln des nächsten (besten) Zentroiden\n",
     "\n",
-    "Nun wollen wir für einen `Datenpunkt` den nächstgelegenen Zentroiden ermitteln. Wir bekommen dafür die Liste von Zentroiden übergeben und müssen hieraus nun den Zentroiden ermitteln, zu dem die Distanz des `Datenpunkts` am geringsten ist. Überlege dir vorher, wie du vorgehen möchtest. Zurückgegeben wird der Index des ermittelten Zentroiden. Wenn also der 3. Zentroid der nächstgelegene ist, dann muss der Index 2 zurückgegeben wird (da Index bei 0 beginnt)."
+    "Nun wollen wir für einen `Datenpunkt` den nächstgelegenen Zentroiden ermitteln. Wir bekommen dafür die Liste von Zentroiden übergeben und müssen hieraus nun den Zentroiden ermitteln, zu dem die Distanz des `Datenpunkts` am geringsten ist. Überlege dir vorher, wie du vorgehen möchtest. Zurückgegeben wird der Index des ermittelten Zentroiden. Wenn also der 3. Zentroid der nächstgelegene ist, dann muss der Index 2 zurückgegeben wird (da Index bei 0 beginnt).\n",
+    "\n",
+    "```{admonition} Wichtiger Tipp\n",
+    "Du benötigst die Methode `berechne_euklidische_distanz()` aus der vorigen Aufgabe!\n",
+    "```"
    ]
   },
   {
@@ -400,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def finde_naechsten_zentroiden(zentroiden: list[Datenpunkt], datenpunkt: Datenpunkt) -> int:\n",
+    "def finde_index_des_naechsten_zentroiden(zentroiden: list[Datenpunkt], datenpunkt: Datenpunkt) -> int:\n",
     "    \"\"\"\n",
     "    Finde den nächsten Zentroiden für einen gegebenen Datenpunkt. Wenn es mehrere Zentroiden mit\n",
     "    der gleichen minimalen Distanz gibt, wird der erste gefundene Zentroid zurückgegeben.\n",
@@ -418,9 +430,18 @@
     "        >>> finde_naechsten_zentroiden(zentroiden, datenpunkt)\n",
     "        1\n",
     "    \"\"\"\n",
-    "    ...  # Hier Lösung ergänzen\n",
+    "    geringste_distanz = float('inf') # Erstmal die maximale Distanz wählen\n",
+    "    naechster_zentroid: int\n",
+    "    index = 0\n",
+    "    for zentroid in zentroiden:\n",
+    "        ...  # Hier Lösung ergänzen\n",
+    "        # Wie kannst du die Distanz zwischen zwei Punkten berechnen?\n",
+    "        # Wie kannst du prüfen, ob eine Distanz kleiner ist als die bisher geringste?\n",
+    "        # Wie kannst du den Index des Zentroiden speichern, wenn die Distanz g\n",
+    "        \n",
+    "    return naechster_zentroid\n",
     "\n",
-    "run_doctests_mit_lesbarer_ausgabe(finde_naechsten_zentroiden)"
+    "run_doctests_mit_lesbarer_ausgabe(finde_index_des_naechsten_zentroiden)"
    ]
   },
   {
@@ -429,9 +450,19 @@
    "source": [
     "# Aufgabe 3: Erzeugen der Cluster\n",
     "\n",
-    "Nachdem wir den nächsten Zentroiden zu einem Datenpunkt berechnen können, sind wir nun in der Lage, alle Datenpunkte zu clustern. Mit der Methode `weise_cluster_zu()` können wir nun für jeden Datenpunkt den nächsten Zentroiden ermitteln und daraus die Cluster bilden.\n",
+    "Nachdem wir den nächsten Zentroiden zu einem Datenpunkt berechnen können, sind wir nun in der Lage, alle Datenpunkte zu clustern. Mit der Methode `erzeuge_cluster()` können wir nun für jeden Datenpunkt den nächsten Zentroiden ermitteln und daraus die Cluster bilden.\n",
     "\n",
-    "In der Methode unten ist bereits das Erzeugen der leeren Cluster erfolgt, darum musst du dich nicht kümmern. Was du noch ergänzen musst, ist das Ermitteln des nächsten Zentroiden zu jedem Datenpunkt. Mit dem erhaltenen Index kannst du im Dictionary dann den Datenpunkt dem zugehörigen Cluster anhängen."
+    "In der Methode unten ist bereits das Erzeugen der leeren Cluster erfolgt, darum musst du dich nicht kümmern. Was du noch ergänzen musst, ist das Ermitteln des nächsten Zentroiden zu jedem Datenpunkt. Mit dem erhaltenen Index kannst du dann in der Liste von Clustern jeden den Datenpunkt dem zugehörigen Cluster anhängen.\n",
+    "\n",
+    "```{admonition} Wichtiger Tipp\n",
+    "Die Cluster sind in einer Liste enthalten. Die Cluster selber sind auch Listen. Hier unten siehst du ein Beispiel von einer Liste mit 3 Clustern.\n",
+    "\n",
+    "`clusters = [[Datenpunkt(1.0, 1.0), Datenpunkt(3.0, 3.0)], [Datenpunkt(5.0, 5.0)], [Datenpunkt(7.0, 7.0)]]`\n",
+    "\n",
+    "Cluster an Index 0 hat die Elemente `Datenpunkt(1.0, 1.0)` und `Datenpunkt(3.0, 3.0)`\n",
+    "Cluster an Index 1 hat das Element `Datenpunkt(5.0, 5.0)`\n",
+    "Cluster an Index 2 hat das Element `Datenpunkt(7.0, 7.0)`\n",
+    "```"
    ]
   },
   {
@@ -440,29 +471,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def erzeuge_cluster(datenpunkte: list[Datenpunkt], zentroiden: list[Datenpunkt]) -> dict[int, list[Datenpunkt]]:\n",
+    "def erzeuge_cluster(datenpunkte: list[Datenpunkt], zentroiden: list[Datenpunkt]) -> list[list[Datenpunkt]]:\n",
     "    \"\"\"\n",
     "    Weist jeden Datenpunkt den entsprechenden Cluster zu.\n",
     "    Args:\n",
     "        datenpunkte: Liste der Datenpunkte, die den Clustern zugeordnet werden sollen.\n",
     "        zentroiden: Liste der Zentroiden, die die Cluster repräsentieren.\n",
     "    Returns:\n",
-    "        dict[int, list[Datenpunkt]]: Dictionary mit den Clustern und den zugehörigen Datenpunkten.\n",
+    "        list[list[Datenpunkt]]: Liste von Clustern, wobei jeder Cluster als eine Liste von Datenpunkten dargestellt wird.\n",
     "    Examples:\n",
     "        >>> datenpunkte = [Datenpunkt(1.0, 1.0), Datenpunkt(3.0, 3.0), Datenpunkt(5.0, 5.0), Datenpunkt(7.0, 7.0)]\n",
     "        >>> zentroiden = [Datenpunkt(2.0, 2.0), Datenpunkt(4.0, 4.0), Datenpunkt(6.0, 6.0)]\n",
     "        >>> erzeuge_cluster(datenpunkte, zentroiden)\n",
-    "        {0: [Datenpunkt(1.0, 1.0), Datenpunkt(3.0, 3.0)], 1: [Datenpunkt(5.0, 5.0)], 2: [Datenpunkt(7.0, 7.0)]}\n",
+    "        [[Datenpunkt(1.0, 1.0), Datenpunkt(3.0, 3.0)], [Datenpunkt(5.0, 5.0)], [Datenpunkt(7.0, 7.0)]]\n",
     "\n",
     "        >>> datenpunkte = [Datenpunkt(1.4, 1.2), Datenpunkt(1.6, 4.7), Datenpunkt(5.2, 8.3), Datenpunkt(5.1, 8.2), Datenpunkt(3.1, 9.2)]\n",
     "        >>> zentroiden = [Datenpunkt(1.0, 3.0), Datenpunkt(4.0, 5.0)]\n",
     "        >>> erzeuge_cluster(datenpunkte, zentroiden)\n",
-    "        {0: [Datenpunkt(1.4, 1.2), Datenpunkt(1.6, 4.7)], 1: [Datenpunkt(5.2, 8.3), Datenpunkt(5.1, 8.2), Datenpunkt(3.1, 9.2)]}\n",
+    "        [[Datenpunkt(1.4, 1.2), Datenpunkt(1.6, 4.7)], [Datenpunkt(5.2, 8.3), Datenpunkt(5.1, 8.2), Datenpunkt(3.1, 9.2)]]\n",
     "    \"\"\"\n",
-    "    clusters: dict[int, list[Datenpunkt]] = {}\n",
-    "    for zentroid in range(len(zentroiden)):\n",
-    "        clusters[zentroid] = []\n",
-    "    \n",
+    "    # Es wurde schon ein leere Liste für die Cluster angelegt für dich ;)\n",
+    "    clusters: list[list[Datenpunkt]] = []\n",
+    "    anzahl_cluster = len(zentroiden)\n",
+    "    for _ in range(anzahl_cluster):\n",
+    "        clusters.append([])\n",
+    "\n",
+    "    # Du kannst nun jeden Datenpunkt dem richtigen Cluster zuweisen, indem du den Index des\n",
+    "    # nächsten Zentroiden findest und den Datenpunkt dem entsprechenden Cluster hinzufügst.\n",
+    "    # Tipp 1: Du benötigst die Methode finde_index_des_naechsten_zentroiden() aus der vorigen Aufgabe\n",
+    "    # Tipp 2: um einer Liste ein weiteres Item hinzuzuügen, kannst du die Methode list.append() verwenden.\n",
     "    ...  # Hier die weitere Lösung ergänzen\n",
     "\n",
     "    return clusters\n",
@@ -501,7 +538,13 @@
     "        >>> berechne_zentroid_koordinaten(datenpunkte)\n",
     "        Datenpunkt(2.73, 5.83)\n",
     "    \"\"\"\n",
+    "    # Der Zentroid wird mit den Mittelwerten der X- und Y-Koordinaten der Datenpunkte berechnet.\n",
+    "    # Du benötigst also die Summe der X- und Y-Koordinaten und die Anzahl der Datenpunkte.\n",
     "    ...  # Hier Lösung ergänzen\n",
+    "    x_mittelwert = 0\n",
+    "    y_mittelwert = 0\n",
+    "    \n",
+    "    return Datenpunkt(x_mittelwert, y_mittelwert)\n",
     "\n",
     "run_doctests_mit_lesbarer_ausgabe(berechne_zentroid_koordinaten)"
    ]
@@ -524,6 +567,10 @@
     "\n",
     "for datenpunkte_in_cluster in clusters.values():\n",
     "    ...\n",
+    "```\n",
+    "\n",
+    "```{admonition} Wichtiger Tipp\n",
+    "Du benötigst die Methode `berechne_zentroid_koordinaten()` aus der vorigen Aufgabe!\n",
     "```"
    ]
   },
@@ -551,6 +598,11 @@
     "        [Datenpunkt(3.23, 7.33), Datenpunkt(3.27, 7.37)]\n",
     "    \"\"\"\n",
     "    neue_zentroiden: list[Datenpunkt] = []\n",
+    "    # Du musst nun für jeden Cluster die Zentroiden neu berechnen.\n",
+    "    # Tipp: Du kannst die Methode dict.values() verwenden, um die Werte des Dictionaries zu erhalten.\n",
+    "    # Tipp: Du benötigst die Methode berechne_zentroid_koordinaten() aus der vorigen Aufgabe\n",
+    "    # Tipp: Du kannst die Methode list.append() verwenden, um die neuen Zentroiden hinzuzufügen.\n",
+    "\n",
     "    ...  # Hier Lösung ergänzen\n",
     "    \n",
     "    return neue_zentroiden\n",
@@ -564,7 +616,11 @@
    "source": [
     "# Finale: k-Means-Clustering vollendet\n",
     "\n",
-    "Wir haben nun alle nötigen Untermethoden für den Algorithmus erzeugt und können ihn nun starten. Wir definieren noch eine Methode, um die einzelnen Schritte in Schaubildern (Plots) erzeugen zu können."
+    "Wir haben nun alle nötigen Untermethoden für den Algorithmus erzeugt und können ihn nun starten. Wir definieren noch eine Methode, um die einzelnen Schritte in Schaubildern (Plots) erzeugen zu können.\n",
+    "\n",
+    "```{admonition} Wichtiger Tipp\n",
+    "Du benötigst die Methoden aus der vorigen Aufgabe!\n",
+    "```"
    ]
   },
   {
@@ -669,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
