--- a/book/ki/kmeansclustering2_loesung.ipynb
+++ b/book/ki/kmeansclustering2_loesung.ipynb
@@ -89,7 +89,7 @@
     "Mit Unit-Tests bist du also gut aufgestellt, um zuverlässigen und stabilen Code zu schreiben, der leichter zu warten ist.\n",
     "```\n",
     "\n",
-    "Folgend ist wird definiert, wie die Erfolgs- und Fehlerausgabe in einem für uns gut lesbaren Format ausgegeben wird. Du musst es nicht verstehen, es ist nur wichtig, bei den Implementierungen `run_doctests_mit_lesbarer_ausgabe(methoden_name)` auszuführen, um die Methode zu testen und die Ausgabe dazu erhalten. Du erhälst immer die Info, ob die Methode erfolgreich implementiert wurde oder ob es noch Tests gibt, die fehlschlagen."
+    "Folgend ist wird definiert, wie die Erfolgs- und Fehlerausgabe in einem für uns gut lesbaren Format ausgegeben wird. Du musst es nicht verstehen, es ist nur wichtig, bei den Implementierungen `run_doctests_mit_lesbarer_ausgabe(methoden_name)` auszuführen, um die Methode zu testen und die Ausgabe dazu erhalten. Du erhältst immer die Info, ob die Methode erfolgreich implementiert wurde oder ob es noch Tests gibt, die fehlschlagen."
    ]
   },
   {
@@ -366,20 +366,24 @@
    "source": [
     "def berechne_euklidische_distanz(datenpunkt1: Datenpunkt, datenpunkt2: Datenpunkt) -> float:\n",
     "    \"\"\"\n",
-    "    Berechnet die euklidische Distanz zu einem anderen Datenpunkt.\n",
+    "    Berechnet die euklidische Distanz zu einem anderen Datenpunkt auf zwei Dezimalstellen gerundet.\n",
     "    Args:\n",
     "        datenpunkt1: Erster Datenpunkt.\n",
     "        datenpunkt2: Zweiter Datenpunkt.\n",
     "    Returns:\n",
-    "        float: Euklidische Distanz zwischen den beiden Datenpunkten.\n",
+    "        float: Euklidische Distanz zwischen den beiden Datenpunkten auf zwei Dezimalstellen gerundet.\n",
     "    Examples:\n",
-    "        >>> datenpunkt1 = Datenpunkt(1.0, 1.0)\n",
-    "        >>> datenpunkt2 = Datenpunkt(4.0, 5.0)\n",
+    "        >>> datenpunkt1 = Datenpunkt(1.0, 2.0)\n",
+    "        >>> datenpunkt2 = Datenpunkt(3.0, 4.0)\n",
     "        >>> berechne_euklidische_distanz(datenpunkt1, datenpunkt2)\n",
-    "        5.0\n",
+    "        2.83\n",
     "        >>> berechne_euklidische_distanz(datenpunkt1, datenpunkt1)\n",
     "        0.0\n",
     "    \"\"\"\n",
+    "    # Du benötigst den Satz des Pythagoras: distanz = sqrt(a^2 + b^2)\n",
+    "    # Potenz: 3 ** 2 = 9\n",
+    "    # Wurzel: 9 ^ 0.5 = 3\n",
+    "    # Zum runden gibt es die Methode round() z.B. round(3.14159, 2) = 3.14\n",
     "    ...  # Hier Lösung ergänzen\n",
     "    diff_x = datenpunkt1.x - datenpunkt2.x\n",
     "    diff_y = datenpunkt1.y - datenpunkt2.y\n",
@@ -406,7 +410,7 @@
    "source": [
     "def finde_naechsten_zentroiden(zentroiden: list[Datenpunkt], datenpunkt: Datenpunkt) -> int:\n",
     "    \"\"\"\n",
-    "    Finde den nächsten Zentroiden für einen gegebenen Datenpunkt. Wenn es mehrere Zentroiden mit\n",
+    "    Finde den Index des nächsten Zentroiden für einen gegebenen Datenpunkt. Wenn es mehrere Zentroiden mit\n",
     "    der gleichen minimalen Distanz gibt, wird der erste gefundene Zentroid zurückgegeben.\n",
     "    Args:\n",
     "        zentroiden (list[Datenpunkt]): Liste der Zentroiden, zwischen denen der nächste gesucht wird.\n",
@@ -423,7 +427,7 @@
     "        1\n",
     "    \"\"\"\n",
     "    ...  # Hier Lösung ergänzen\n",
-    "    geringste_distanz = float('inf')\n",
+    "    geringste_distanz = float('inf') # Erstmal die maximale Distanz wählen\n",
     "    naechster_zentroid: int\n",
     "    index = 0\n",
     "    for zentroid in zentroiden:\n",
@@ -443,9 +447,19 @@
    "source": [
     "# Aufgabe 3: Erzeugen der Cluster\n",
     "\n",
-    "Nachdem wir den nächsten Zentroiden zu einem Datenpunkt berechnen können, sind wir nun in der Lage, alle Datenpunkte zu clustern. Mit der Methode `weise_cluster_zu()` können wir nun für jeden Datenpunkt den nächsten Zentroiden ermitteln und daraus die Cluster bilden.\n",
+    "Nachdem wir den nächsten Zentroiden zu einem Datenpunkt berechnen können, sind wir nun in der Lage, alle Datenpunkte zu clustern. Mit der Methode `erzeuge_cluster()` können wir nun für jeden Datenpunkt den nächsten Zentroiden ermitteln und daraus die Cluster bilden.\n",
     "\n",
-    "In der Methode unten ist bereits das Erzeugen der leeren Cluster erfolgt, darum musst du dich nicht kümmern. Was du noch ergänzen musst, ist das Ermitteln des nächsten Zentroiden zu jedem Datenpunkt. Mit dem erhaltenen Index kannst du im Dictionary dann den Datenpunkt dem zugehörigen Cluster anhängen."
+    "In der Methode unten ist bereits das Erzeugen der leeren Cluster erfolgt, darum musst du dich nicht kümmern. Was du noch ergänzen musst, ist das Ermitteln des nächsten Zentroiden zu jedem Datenpunkt. Mit dem erhaltenen Index kannst du dann in der Liste von Clustern jeden den Datenpunkt dem zugehörigen Cluster anhängen.\n",
+    "\n",
+    "```{admonition} Wichtiger Tipp\n",
+    "Die Cluster sind in einer Liste enthalten. Die Cluster selber sind auch Listen. Hier unten siehst du ein Beispiel von einer Liste mit 3 Clustern.\n",
+    "\n",
+    "`clusters = [[Datenpunkt(1.0, 1.0), Datenpunkt(3.0, 3.0)], [Datenpunkt(5.0, 5.0)], [Datenpunkt(7.0, 7.0, Datenpunkt(8.0, 8.0))]]`\n",
+    "\n",
+    "Cluster an Index 0 hat die Elemente `Datenpunkt(1.0, 1.0)` und `Datenpunkt(3.0, 3.0)`\n",
+    "Cluster an Index 1 hat das Element `Datenpunkt(5.0, 5.0)`\n",
+    "Cluster an Index 2 hat das Element `Datenpunkt(7.0, 7.0)` und `Datenpunkt(8.0, 8.0)`\n",
+    "```"
    ]
   },
   {
@@ -454,35 +468,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def erzeuge_cluster(datenpunkte: list[Datenpunkt], zentroiden: list[Datenpunkt]) -> dict[int, list[Datenpunkt]]:\n",
+    "def erzeuge_cluster(datenpunkte: list[Datenpunkt], zentroiden: list[Datenpunkt]) -> list[list[Datenpunkt]]:\n",
     "    \"\"\"\n",
     "    Weist jeden Datenpunkt den entsprechenden Cluster zu.\n",
     "    Args:\n",
     "        datenpunkte: Liste der Datenpunkte, die den Clustern zugeordnet werden sollen.\n",
     "        zentroiden: Liste der Zentroiden, die die Cluster repräsentieren.\n",
     "    Returns:\n",
-    "        dict[int, list[Datenpunkt]]: Dictionary mit den Clustern und den zugehörigen Datenpunkten.\n",
+    "        list[list[Datenpunkt]]: Liste von Clustern, wobei jeder Cluster als eine Liste von Datenpunkten dargestellt wird.\n",
     "    Examples:\n",
     "        >>> datenpunkte = [Datenpunkt(1.0, 1.0), Datenpunkt(3.0, 3.0), Datenpunkt(5.0, 5.0), Datenpunkt(7.0, 7.0)]\n",
     "        >>> zentroiden = [Datenpunkt(2.0, 2.0), Datenpunkt(4.0, 4.0), Datenpunkt(6.0, 6.0)]\n",
     "        >>> erzeuge_cluster(datenpunkte, zentroiden)\n",
-    "        {0: [Datenpunkt(1.0, 1.0), Datenpunkt(3.0, 3.0)], 1: [Datenpunkt(5.0, 5.0)], 2: [Datenpunkt(7.0, 7.0)]}\n",
+    "        [[Datenpunkt(1.0, 1.0), Datenpunkt(3.0, 3.0)], [Datenpunkt(5.0, 5.0)], [Datenpunkt(7.0, 7.0)]]\n",
     "\n",
     "        >>> datenpunkte = [Datenpunkt(1.4, 1.2), Datenpunkt(1.6, 4.7), Datenpunkt(5.2, 8.3), Datenpunkt(5.1, 8.2), Datenpunkt(3.1, 9.2)]\n",
     "        >>> zentroiden = [Datenpunkt(1.0, 3.0), Datenpunkt(4.0, 5.0)]\n",
     "        >>> erzeuge_cluster(datenpunkte, zentroiden)\n",
-    "        {0: [Datenpunkt(1.4, 1.2), Datenpunkt(1.6, 4.7)], 1: [Datenpunkt(5.2, 8.3), Datenpunkt(5.1, 8.2), Datenpunkt(3.1, 9.2)]}\n",
+    "        [[Datenpunkt(1.4, 1.2), Datenpunkt(1.6, 4.7)], [Datenpunkt(5.2, 8.3), Datenpunkt(5.1, 8.2), Datenpunkt(3.1, 9.2)]]\n",
     "    \"\"\"\n",
-    "    clusters: dict[int, list[Datenpunkt]] = {}\n",
-    "    for zentroid in range(len(zentroiden)):\n",
-    "        clusters[zentroid] = []\n",
+    "    # Es wurde schon ein leere Liste für die Cluster angelegt für dich ;)\n",
+    "    clusters: list[list[Datenpunkt]] = []\n",
+    "    anzahl_cluster = len(zentroiden)\n",
+    "    for _ in range(anzahl_cluster):\n",
+    "        clusters.append([])\n",
     "\n",
+    "    # Du kannst nun jeden Datenpunkt dem richtigen Cluster zuweisen, indem du den Index des\n",
+    "    # nächsten Zentroiden findest und den Datenpunkt dem entsprechenden Cluster hinzufügst.\n",
+    "    # Tipp 1: Du benötigst die Methode finde_index_des_naechsten_zentroiden() aus der vorigen Aufgabe\n",
+    "    # Tipp 2: um einer Liste ein weiteres Item hinzuzuügen, kannst du die Methode list.append() verwenden.\n",
     "    ...  # Hier die weitere Lösung ergänzen\n",
     "    for datenpunkt in datenpunkte:\n",
     "        index_naechster_zentroid = finde_naechsten_zentroiden(zentroiden, datenpunkt)\n",
     "        clusters[index_naechster_zentroid].append(datenpunkt)\n",
     "    return clusters\n",
     "\n",
+    "datenpunkte = [Datenpunkt(1.0, 1.0), Datenpunkt(3.0, 3.0), Datenpunkt(5.0, 5.0), Datenpunkt(7.0, 7.0)]\n",
+    "zentroiden = [Datenpunkt(2.0, 2.0), Datenpunkt(4.0, 4.0), Datenpunkt(6.0, 6.0)]\n",
+    "erzeuge_cluster(datenpunkte, zentroiden)\n",
     "run_doctests_mit_lesbarer_ausgabe(erzeuge_cluster)"
    ]
   },
@@ -523,8 +546,8 @@
     "    for datenpunkt in datenpunkte:\n",
     "        x_summe += datenpunkt.x\n",
     "        y_summe += datenpunkt.y\n",
-    "    x_mittelwert = x_summe / len(datenpunkte)\n",
-    "    y_mittelwert = y_summe / len(datenpunkte)\n",
+    "    x_mittelwert = x_summe / len(datenpunkte) # Hier den Mittelwert der X-Koordinaten berechnen\n",
+    "    y_mittelwert = y_summe / len(datenpunkte) # Hier den Mittelwert der Y-Koordinaten berechnen\n",
     "\n",
     "    return Datenpunkt(x_mittelwert, y_mittelwert)\n",
     "\n",
@@ -537,17 +560,19 @@
    "source": [
     "# Aufgabe 5: Zentroiden für alle Cluster neu berechnen\n",
     "\n",
-    "Nun wird es spannend: Mit Hilfe der vorigen Methode `berechne_zentroid_koordinaten()` kannst du nun für alle Cluster die Zentroiden neu berechnen lassen. `aktualisiere_zentroiden()` erhält dabei ein Dictionary der Clusters. Ein Eintrag im Dictionary ist dabei der Index des Clusters und die dazugehörigen Datenpunkte. Es ist möglich, über die Werte des Dictionary zu iterieren mit `dict.values()`\n",
+    "Nun wird es spannend: Mit Hilfe der vorigen Methode `berechne_zentroid_koordinaten()` kannst du nun für alle Cluster die Zentroiden  berechnen lassen. `aktualisiere_zentroiden()` erhält dabei die Liste der Clusters. Ein Eintrag in der Liste ist dabei die Liste der dazugehörigen Datenpunkte.\n",
     "\n",
     "Ein Beispiel:\n",
+    "\n",
     "```python\n",
-    "clusters = {\n",
+    "clusters = [\n",
     "    0: [Datenpunkt(1, 1), Datenpunkt(2, 2)],\n",
     "    1: [Datenpunkt(4, 4), Datenpunkt(5, 5)],\n",
     "    2: [Datenpunkt(8, 8)]\n",
-    "}\n",
+    "]\n",
     "\n",
-    "for datenpunkte_in_cluster in clusters.values():\n",
+    "for cluster_datenpunkte in clusters\n",
+    "    # Stelle Berechnungen an für die Datenpunkte eines Clusters\n",
     "    ...\n",
     "```"
    ]
@@ -558,26 +583,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def aktualisiere_zentroiden(clusters: dict[int, list[Datenpunkt]]) -> list[Datenpunkt]:\n",
+    "def aktualisiere_zentroiden(clusters: list[list[Datenpunkt]]) -> list[Datenpunkt]:\n",
     "    \"\"\"\n",
     "    Aktualisiert die Zentroiden basierend auf den zugewiesenen Datenpunkten.\n",
     "    Dabei wird für jeden Cluster der Zentroid neu berechnet.\n",
     "    Args:\n",
-    "        clusters: Dictionary mit den Clustern und den zugehörigen Datenpunkten.\n",
+    "        clusters: Liste mit den Clustern und den zugehörigen Datenpunkten.\n",
     "    Returns:\n",
     "        list[Datenpunkt]: Liste der neuen Zentroiden.\n",
     "    Examples:\n",
-    "        >>> clusters = {0: [Datenpunkt(1.0, 1.0), Datenpunkt(3.0, 3.0)], 1: [Datenpunkt(5.0, 5.0), Datenpunkt(7.0, 7.0)]}\n",
+    "        >>> clusters = [[Datenpunkt(1.0, 1.0), Datenpunkt(3.0, 3.0)], [Datenpunkt(5.0, 5.0), Datenpunkt(7.0, 7.0)]]\n",
     "        >>> aktualisiere_zentroiden(clusters)\n",
     "        [Datenpunkt(2.0, 2.0), Datenpunkt(6.0, 6.0)]\n",
     "\n",
-    "        >>> clusters = {0: [Datenpunkt(1.4, 4.5), Datenpunkt(5.2, 8.3), Datenpunkt(3.1, 9.2)], 1: [Datenpunkt(1.6, 4.7), Datenpunkt(5.1, 8.2), Datenpunkt(3.1, 9.2)]}\n",
+    "        >>> clusters = [[Datenpunkt(1.4, 4.5), Datenpunkt(5.2, 8.3), Datenpunkt(3.1, 9.2)], [Datenpunkt(1.6, 4.7), Datenpunkt(5.1, 8.2), Datenpunkt(3.1, 9.2)]]\n",
     "        >>> aktualisiere_zentroiden(clusters)\n",
     "        [Datenpunkt(3.23, 7.33), Datenpunkt(3.27, 7.37)]\n",
     "    \"\"\"\n",
     "    ...  # Hier Lösung ergänzen\n",
     "    neue_zentroiden: list[Datenpunkt] = []\n",
-    "    for datenpunkte_in_cluster in clusters.values():\n",
+    "    for datenpunkte_in_cluster in clusters:\n",
     "        neuer_zentroid: Datenpunkt = berechne_zentroid_koordinaten(datenpunkte_in_cluster)\n",
     "        neue_zentroiden.append(neuer_zentroid)\n",
     "    return neue_zentroiden\n",
@@ -602,15 +627,17 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def plot_cluster(clusters, zentroiden, iteration):\n",
+    "def plot_cluster(clusters: list[list[Datenpunkt]], zentroiden: list[Datenpunkt], iteration: int) -> None:\n",
     "    farben = ['green', 'blue', 'orange', 'purple', 'red', 'brown', 'pink', 'gray', 'cyan', 'magenta']\n",
     "    \n",
     "    plt.figure(figsize=(6, 6))\n",
-    "    for cluster_index, cluster_datenpunkte in clusters.items():\n",
+    "    cluster_index = 0\n",
+    "    for cluster_datenpunkte in clusters:\n",
     "        x_coords = [datenpunkt.x for datenpunkt in cluster_datenpunkte]\n",
     "        y_coords = [datenpunkt.y for datenpunkt in cluster_datenpunkte]\n",
     "        plt.scatter(x_coords, y_coords, color=farben[cluster_index], label=f'Cluster {cluster_index + 1} ({zentroiden[cluster_index].x}, {zentroiden[cluster_index].y})')\n",
-    "    \n",
+    "        cluster_index += 1\n",
+    "        \n",
     "    zentroid_x_coords = [zentroid.x for zentroid in zentroiden]\n",
     "    zentroid_y_coords = [zentroid.y for zentroid in zentroiden]\n",
     "    plt.scatter(zentroid_x_coords, zentroid_y_coords, color='black', marker='x', s=100)  # Zentroiden ohne Legende\n",
@@ -635,7 +662,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def k_means(datenpunkte: list[Datenpunkt], anzahl_cluster: int, max_iterationen: int, print_plots = False) -> tuple[dict[int, list[Datenpunkt]], list[Datenpunkt]]:\n",
+    "def k_means(datenpunkte: list[Datenpunkt], anzahl_cluster: int, max_iterationen: int, print_plots = False) -> tuple[list[list[Datenpunkt]], list[Datenpunkt]]:\n",
     "    \"\"\"\n",
     "    Hauptfunktion für den k-means Algorithmus zur Clusterbildung. Der Algorithmus besteht aus folgenden Schritten:\n",
     "    2. Initialisierung der Zentroiden\n",
@@ -647,7 +674,7 @@
     "        anzahl_cluster: Anzahl der Cluster, die gebildet werden sollen.\n",
     "        max_iterationen: Maximale Anzahl der Iterationen, die der Algorithmus durchführt.\n",
     "    Returns:\n",
-    "        tuple[dict[int, list[Datenpunkt]], list[Datenpunkt]]: Die Cluster und die finalen Zentroiden.\n",
+    "        tuple[list[list[Datenpunkt]], list[Datenpunkt]]: Die Cluster und die finalen Zentroiden.\n",
     "    Examples:\n",
     "        >>> datenpunkte = [Datenpunkt(1.0, 1.0), Datenpunkt(1.0, 3.0), Datenpunkt(3.0, 3.0), Datenpunkt(4.0, 2.0), Datenpunkt(5.0, 5.0)]\n",
     "        >>> clusters, zentroiden = k_means(datenpunkte, 2, 100)\n",
@@ -655,12 +682,12 @@
     "        2\n",
     "        >>> len(zentroiden)\n",
     "        2\n",
-    "        >>> sum(len(cluster) for cluster in clusters.values()) == len(datenpunkte)\n",
+    "        >>> sum(len(cluster) for cluster in clusters) == len(datenpunkte)\n",
     "        True\n",
     "    \"\"\"\n",
     "    # 2. Initialisierung der Zentroiden\n",
     "    zentroiden = initialisiere_zentroiden(datenpunkte, anzahl_cluster)\n",
-    "    clusters = {}\n",
+    "    clusters = []\n",
     "\n",
     "    for iteration in range(max_iterationen):\n",
     "        # 3. Zuweisung der Datenpunkte und Bildung der Cluster\n",
